# imagesPlayEditor

./: .editorconfig  .gitattributes  .gitignore  LICENSE  PROJECT_CHECKLIST.md  PUBLIC_REPO_CHECKLIST.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.ai-temp/memory-bank/: project-memory.md
.ai-temp/working-log/: 20260309230124-修复帧列表空白取消选中.md  20260309230755-抽离选中态模块治理面条化.md  20260309231238-抽离DOM查询模块继续治理面条化.md  20260309232149-抽离设置弹窗逻辑继续治理面条化.md  20260309234131-优化toolbar与侧栏视觉样式.md  20260309234950-导出面板改为toolbar弹窗.md  20260309235652-重构导出弹窗视觉布局.md  20260309235749-帧列表高度撑满侧栏.md  20260310000034-重构导出弹窗布局修复横向滚动.md  20260310000748-窗口边界自适应与防溢出修复.md  20260310000946-前端样式分层重构治理面条化.md  20260310003546-修复标注拖拽并重构画布选中判定.md  20260310004455-工具按钮激活态样式增强.md  20260310004742-面条化分析报告.md  20260310005132-拆分app事件绑定降低入口耦合.md  20260310055419-持续面条化治理第二轮拆分.md  20260310055809-持续面条化治理第三轮拆分frameview.md  20260310064139-持续面条化治理第四轮运行时与timeline样式拆分.md  20260310071030-持续面条化治理第五轮export-canvas-toolbar拆分.md  20260310071810-持续面条化治理第六轮frameview-dialogs-canvas编辑拆分.md  20260310090051-修复标注编辑区窗口自适应与滚动溢出.md  (+10 more)
scripts/: build-info-utils.mjs  build-info-utils.test.mjs  check-lines.mjs  ensure-build-info.mjs  sync-build-info.mjs  tauri-build.mjs  tauri-dev.mjs
src/: app-template.ts  app.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: system.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/annotation/: mod.rs
src-tauri/src/domain/exporter/: mod.rs
src-tauri/src/domain/timeline/: mod.rs
(+94 files in other folders)
