[package]
name = "images_play_editor"
version = "0.1.0"
description = "Image step annotation editor"
authors = ["imagesPlayEditor"]
edition = "2021"

[lib]
name = "images_play_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
